BP adjust事件
